--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Morad larbi messaoudi <62658473+moradlarbi@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
