--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.4",
+    "lint": "^0.8.19",
+    "mysql2": "^3.12.0",
     "zod": "^3.23.8",
     "zod-express-middleware": "^1.4.0"
   },
@@ -27,6 +28,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "eslint": "^9.17.0",
     "nodemon": "^3.1.7"
   }
 }
